--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -837,7 +837,7 @@
     "# SQLite queries handler:\n",
     "import sqlite3\n",
     "def sql_run(cmd):\n",
-    "\tsql = sqlite3.connect(\"assets/test1.db\")\n",
+    "\tsql = sqlite3.connect(\"assets/main.db\")\n",
     "\tsql_cursor = sql.cursor()\n",
     "\tsql_cursor.execute(cmd)\n",
     "\tdbmsg = 0\n",
