--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -468,8 +468,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Good Accuracy: 0.440400\n",
-      "Bad Accuracy: -0.542300\n"
+      "Aggregate Sentiment of Good: 0.440400\n",
+      "Aggregate Sentiment of Bad: -0.542300\n"
      ]
     }
    ],
