--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -532,7 +532,7 @@
     "\t\t\telif sum([1 for i in tmp_corpus if i<0])>len(tmp_corpus)/2:\n",
     "\t\t\t\treturn -1*np.mean([i for i in tmp_corpus if i<0])\n",
     "\t\tfor j in words_ref[:0]:\n",
-    "\t\t\tif j[:2]==\"un\":\n",
+    "\t\t\tif j[:2] in [\"un\", \"in\"]:\n",
     "\t\t\t\tj = j[:2]\n",
     "\t\t\tlexicon_.append(SequenceMatcher(None, seq1, j).ratio())\n",
     "\t\tif max(lexicon_)>=0.85:\n",
