--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -943,7 +943,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The final step in preparing the training dataset using all the function defined above"
+    "# The final step in preparing the training dataset using all the functions defined above"
    ]
   },
   {
@@ -1325,7 +1325,7 @@
     }
    ],
    "source": [
-    "# Plot amplified prediction and the original market values\n",
+    "# Plot amplified predictions and the original market values\n",
     "\tplt.plot(range(y_test.shape[0]),y_test,label=\"Original Data\")\n",
     "\tplt.plot(range(y_test.shape[0]),pred*30,label=\"Predicted Data\",color='orange')\n",
     "\tplt.show()"
